Added address information request
